Fix dropdown overflow issue

--- a/app/stylesheets/_forms.scss
+++ b/app/stylesheets/_forms.scss
@@ -13,7 +13,6 @@
     padding: 10px;
     width: 95%;
     margin: 0 auto;
-    overflow: auto;
   }
 
   .success-message {
